# SlicerSOFA

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SuperBuild.cmake
MultiMaterialSimulation/: CMakeLists.txt  MultiMaterialSimulation.py
MultiMaterialSimulation/Resources/UI/: MultiMaterialSimulation.ui
OrganManipulation/: CMakeLists.txt  OrganManipulation.py
OrganManipulation/Resources/Templates/: OrganManipulation.pyscn.tpl
OrganManipulation/Resources/UI/: OrganManipulation.ui
OrganManipulation/Simulations/: SOFASimulationMulti.py  SOFASimulationSingle.py  SlicerSofaRootBuild.py.in  SlicerSofaRootSource.py.in
SOFA/: CMakeLists.txt  SOFA.py
SOFA/Resources/UI/: SOFA.ui
SOFAOpenIGTLINKIF/: CMakeLists.txt  SOFAOpenIGTLINKIF.py
SOFAOpenIGTLINKIF/Resources/UI/: SOFAOpenIGTLINKIF.ui
SlicerSofa/: CMakeLists.txt  SlicerSofa.py
SlicerSofa/Resources/UI/: SlicerSofa.ui
SlicerSofa/SlicerSofaUtils/: Mappings.py  __init__.py
SlicerSofa/SofaEnvironment/: __init__.py  __init__build.py.in  __init__source.py.in
SlicerSofa/SofaSimulation/: SimulationController.py  SlicerSofaRoot.py  SlicerSofaRootSource.py.in  __init__.py  __init__build.py.in  __init__source.py.in
SlicerSofa/Testing/Python/: SlicerSofaModuleTest.py
SoftTissueSimulation/: CMakeLists.txt  SoftTissueSimulation.py
SoftTissueSimulation/Resources/: SoftTissueSimulationModule.qrc
SoftTissueSimulation/Resources/UI/: SoftTissueSimulation.ui
SparseGridSimulation/: CMakeLists.txt  SparseGridSimulation.py
SparseGridSimulation/Resources/UI/: SparseGridSimulation.ui
SpineDeformationSimulation/: CMakeLists.txt  SpineDeformationSimulation.py
SpineDeformationSimulation/Resources/UI/: SpineDeformationSimulation.ui
SuperBuild/: External_Boost.cmake  External_Eigen3.cmake  External_GLEW.cmake  External_OpenIGTLink.cmake  External_SOFA.cmake  External_Sofa.cmake  External_SofaIGTLink.cmake  External_SofaPython3.cmake  External_SofaSTLIB.cmake  External_TinyXML2.cmake  External_pybind11.cmake  External_tinyxml2.cmake
SuperBuild/patches/: SofaIGTLink_relocatable_install_dir.patch  SofaSTLIB_relocatable_install_dir.patch
cmake/: InstallPythonFiles.cmake  InstallSOFiles.cmake
